# navigation_bt_claude

./: .gitignore  CMakeLists.txt  Project.btproj  README.md
build_msvc/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NavigationBT.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  navigation_bt_nodes.vcxproj  navigation_bt_nodes.vcxproj.filters  navigation_demo.vcxproj  navigation_demo.vcxproj.filters
build_msvc/lib/Release/: gtest_main.lib
build_msvc/navigation_bt_nodes.dir/Release/: navigation_bt_nodes.dll.recipe
build_msvc/navigation_bt_nodes.dir/Release/navigati.8706BD93.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_msvc/navigation_demo.dir/Release/: navigation_demo.exe.recipe
build_msvc/navigation_demo.dir/Release/navigation_demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_msvc/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
config/: groot2_project.xml
include/algorithms/: astar.h
include/bt_nodes/: condition_nodes.h  navigation_nodes.h
include/core/: grid_map.h  types.h
maps/: sample_map.txt
scripts/: run_demo.sh
src/: main.cpp
src/algorithms/: astar.cpp
src/bt_nodes/: condition_nodes.cpp  navigation_nodes.cpp
src/core/: grid_map.cpp
trees/: navigation_main.xml  obstacle_avoidance_subtree.xml  pathfinding_subtree.xml
